[package]
name = "lookbusy"
version = "0.1.1"
edition = "2021"
description = "You are busy."
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
rand = "0.8.5"
ctrlc = "3.2.3"
sysinfo = "0.27.7"