[package]
name = "lookbusy"
version = "0.2.2"
edition = "2021"
description = "You are busy."
license = "Apache-2.0"
repository = "https://github.com/tusik/lookbusy-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
ctrlc = "3.2.3"
sysinfo = "0.27.7"
